# wheel-specification-API

./: Dockerfile  README.md  pyproject.toml
src/: main.py
src/controllers/: wheel_sepecification_services.py
src/core/: config.py
src/database/: connect.py  models.py
src/routers/: wheel_sepecification.py
src/schemas/: default_schemas.py  requests.py  response.py
src/services/: logger.py
